# citrine

./: .gitignore  Cargo.toml  README.md  demo.tape  dev
.github/workflows/: ci.yml  verify.yml
ci/: sentinel.json
ci/verify/: alacritty.sh  common.sh  foot.sh  ghostty.sh  iterm2.sh  kitty.sh  konsole.sh  rio.sh  wezterm.sh
crates/citrine/: Cargo.toml
crates/citrine-core/: Cargo.toml
crates/citrine-core/fuzz/: .gitignore  Cargo.toml
crates/citrine-core/fuzz/fuzz_targets/: fuzz_alacritty_import.rs  fuzz_base16_import.rs  fuzz_color_from_hex.rs  fuzz_ghostty_import.rs  fuzz_image_extract.rs  fuzz_json_import.rs  fuzz_kitty_import.rs  fuzz_wezterm_import.rs
crates/citrine-core/src/: color.rs  contrast.rs  helpers.rs  lib.rs  palette.rs  references.rs
crates/citrine-core/src/formats/: alacritty.rs  base16.rs  css.rs  foot.rs  ghostty.rs  iterm2.rs  json.rs  kitty.rs  konsole.rs  mod.rs  rio.rs  wezterm.rs
crates/citrine-core/tests/: properties.rs
crates/citrine/src/: config.rs  library.rs  main.rs  plumbing.rs  settings.rs  tui.rs
crates/citrine/src/adapters/: alacritty.rs  foot.rs  ghostty.rs  iterm2.rs  kitty.rs  konsole.rs  mod.rs  rio.rs  wezterm.rs
