[package]
name = "citrine-core"
version = "0.1.0"
edition = "2021"
description = "Color, palette, WCAG contrast, and terminal-theme format logic powering the Citrine color-scheme studio."
license = "GPL-3.0-or-later"
repository = "https://github.com/mamayer19/citrine"
homepage = "https://github.com/mamayer19/citrine"
keywords = ["color", "palette", "oklch", "contrast", "terminal"]
categories = ["graphics", "parsing"]

[features]
image = ["dep:image"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
], optional = true }

[dev-dependencies]
proptest = "1.6"
